# boo-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
src/: App.svelte  main.ts  styles.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src/lib/: Authentication.ts  BooError.ts  BooProtocol.ts  DebugView.svelte  Greet.svelte  Hash.ts  HostInfo.ts  IBooProtocol.ts  Icons.ts  KeyEvents.ts  List.svelte  MediaControlPanel.svelte  OptionSelector.svelte  Player.svelte  Preferences.ts  Settings.ts  SidePanel.svelte  SlideShowPanel.svelte  SvgIcon.svelte  TitleBar.svelte  Utils.ts  ViewModel.ts  Viewbox.svelte  ZoomView.svelte
src/lib/common/: SvgIcon.svelte  Viewbox.svelte
src/lib/dialog/: Dialog.ts  PasswordDialog.svelte  SettingsDialog.svelte
src/lib/model/: DebugLog.ts  GlobalEvents.ts  HostInfo.ts  MouseConcealer.ts  Preferences.ts  Settings.ts  SlideShowModel.ts  ViewModel.ts
src/lib/protocol/: BooProtocol.ts  IBooProtocol.ts
src/lib/utils/: CurrentValueStore.ts  DisposableListener.ts  DisposableSubscribe.ts  Disposer.ts  Env.ts  EventBus.ts  GestureRecognizer.ts  IDisposable.ts  KeyEvents.ts  TauriEx.ts  TimingSwitch.ts  Utils.ts
