[package]
name = "bootauri"
version = "0.4.2"
description = "Boo Player with Tauri"
authors = ["io.github.toyota32k"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-title", "window-set-focus", "path-all", "os-all", "window-set-fullscreen", "window-hide", "window-start-dragging", "window-show", "window-unminimize", "window-minimize", "window-maximize", "window-close", "window-unmaximize", "fs-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
